--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
   <head>
     <title>Bookers2kadai3</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column vh-100">
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+        <div class="container">
+          <a class="navbar-brand" href="/"><span>Bookers2</span></a>
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+
+              <% if user_signed_in? %>
+              <li>
+                <%= link_to "Home", user_path(current_user.id), class: "nav-link text-white" %>
+              </li>
+              <li>
+                <%= link_to "Users", users_path, class: "nav-link text-white" %>
+              </li>
+              <li>
+                <%= link_to "Books", books_path, class: "nav-link text-white" %>
+              </li>
+              <li>
+                <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link text-white" %>
+              </li>
+            <% else %>
+              <li>
+                <%= link_to "Home", root_path, class: "nav-link text-white" %>
+              </li>
+              <li>
+                <%= link_to "about", about_path, class: "nav-link text-white" %>
+              </li>
+              <li>
+                <%= link_to "Sign up", new_user_registration_path, class: "nav-link text-white" %>
+              </li>
+              <li>
+                <%= link_to "Log in", new_user_session_path, class: "nav-link text-white" %>
+              </li>
+            <% end %>
+
+            </ul>
+          </div>
+
+        </div>
+      </nav>
+    </header>
+　　<%= flash[:notice] %>
     <%= yield %>
+    <footer>CopyRight Infratop.inc</footer>
   </body>
 </html>
