--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,8 @@
-<h1>welcome to <strong>Bookers</strong> !!</h1>
+<h1>welcome to <i class="fas fa-book"></i>
+<strong>Bookers</strong> !!</h1>
 
-<p>in <strong>Bookers</strong>,<br>
+<p>in <i class="fas fa-book"></i>
+<strong>Bookers</strong>,<br>
 ou can share and exchange your opinions , inpressions , and emotions<br>
 about various books!
 </p>
