--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                 <%= link_to "Home", root_path, class: "nav-link text-white" %>
               </li>
               <li>
-                <%= link_to "about", about_path, class: "nav-link text-white" %>
+                <%= link_to "About", about_path, class: "nav-link text-white" %>
               </li>
               <li>
                 <%= link_to "Sign up", new_user_registration_path, class: "nav-link text-white" %>
