--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,18 +1,27 @@
-
+  <% if @book.errors.any? %>
+    <%= @book.errors.count %>errors prohibited this book from being saved!
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
 
 <div class="container">
   <div class="row">
 
-    <div class="col-lg-4">
-      
+    <div class="col-md-3">
+
       <h1>Users info</h1>
       <div>
       <%= image_tag @user.get_profile_image(100,100) %>
       <h3><%= @user.name %></h3>
       <h3><%= @user.introduction %></h3>
-      <% if @user == current_user %>
-        <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-      <% end %>
+
+          <%= link_to edit_user_path(@user), class: "btn btn-outline-secondary btn-block" do %>
+          <i class="fas fa-user-cog"></i>
+          <% end %>
+
       </div>
 
       <h1>New book</h1>
@@ -25,12 +34,9 @@
       <% end %>
     </div>
 
-    <div class="col-lg-8">
-
+    <div class="col-md-8 offset-md-1">
       <h1>Books</h1>
-
       <table class="table table-striped">
-
       <thead>
         <tr>
           <th></th>
@@ -42,16 +48,17 @@
       <tbody>
 　      <% @books.each do |book| %>
           <tr>
-          <div>
-            <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+            <td>
+              <%= link_to user_path(book.user) do %>
+                <%= image_tag book.user.get_profile_image(100,100) %>
+              <% end %>
+            </td>
             <td><%= link_to book.title, book_path(book.id) %></td>
             <td><%= book.body %></td>
-          </div>
           </tr>
 　      <% end %>
 　    </tbody>
       </table>
-
     </div>
 
   </div>
