--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,20 +1,20 @@
 <div class="container">
   <div class="row">
 
-    <div class="col-lg-4">
-      
+    <div class="col-md-3">
 　　　<h1>Users info</h1>
       <div>
         <%= image_tag @user.get_profile_image(100,100) %>
         <h3><%= @user.name %></h3>
         <h3><%= @user.introduction %></h3>
-        <% if @user == current_user %>
-          <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-        <% end %>
+
+            <%= link_to edit_user_path(@user), class: "btn btn-outline-secondary btn-block" do %>
+            <i class="fas fa-user-cog"></i>
+            <% end %>
+
       </div>
-　　　
+
       <h1>New book</h1>
-      
       <%= form_with model: Book.new do |f| %>
       <h4>Title</h4>
       <%= f.text_field :title %>
@@ -24,12 +24,10 @@
       <% end %>
     </div>
 
-    <div class="col-lg-8">
+    <div class="col-md-8 offset-md-1">
 
       <h1>Users</h1>
-
       <table class="table table-striped">
-  
       <thead>
         <tr>
           <th>image</th>
@@ -37,26 +35,22 @@
           <th></th>
         </tr>
       </thead>
-  
+
       <tbody>
-　    <% @users.each do |user| %>
+　      <% @users.each do |user| %>
         <tr>
-        <div>
-          <%= link_to user_path(user.id) do %>
+          <%= link_to users_path do %>
             <td><%= image_tag user.get_profile_image(100,100) %></td>
           <% end %>
           <%= link_to user_path(user.id) do %>
             <td><%= user.name %></td>
           <% end %>
           <td><%= link_to "Show", user %></td>
-        </div>
         </tr>
-　    <% end %>
+　      <% end %>
 　    </tbody>
-   
       </table>
-
     </div>
 
-  </div>  
+  </div>
 </div>
