--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,62 +1,59 @@
+<html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
+
 <div class="container">
-<div class="row">
+  <div class="row">
 
-  <div class="col-lg-4">
+    <div class="col-md-3">
+      <h1>Users info</h1>
+      <div>
+        <%= image_tag @user.get_profile_image(100,100) %>
+        <h3><%= @user.name %></h3>
+        <h3><%= @user.introduction %></h3>
 
-    <h1>Users info</h1>
-    <div>
-      <%= image_tag @user.get_profile_image(100,100) %>
-      <h3><%= @user.name %></h3>
-      <h3><%= @user.introduction %></h3>
-      <% if @user == current_user %>
-        <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-      <% end %>
+ 
+            <%= link_to edit_user_path(@user), class: "btn btn-outline-secondary btn-block" do %>
+            <i class="fas fa-user-cog"></i>
+            <% end %>
+      </div>
+    
+      <h1>New book</h1>
+        <%= form_with model: Book.new do |f| %>
+        <h4>Title</h4>
+        <%= f.text_field :title %>
+        <h4>Body</h4>
+        <%= f.text_area :body %>
+        <%= f.submit "Create Book" %>
+        <% end %>
+      
+    </div>    
+
+    <div class="col-md-8 offset-md-1">
+      <h1>Books</h1>
+      <table class="table table-striped">
+      <thead>
+        <tr>
+          <th></th>
+          <th>title</th>
+          <th>opinion</th>
+        </tr>  
+      </thead>
+      
+      <tbody>
+        <% @books.each do |book| %>
+        <tr>
+          <td>
+            <%= image_tag book.user.get_profile_image(100,100) %><br>
+            <%= link_to book.user.name, user_path %>
+          </td>
+          <td><%= link_to book.title, book_path(book.id) %></td>
+          <td><%= book.body %></td>
+        </tr>  
+        <% end %>
+      </tbody>
+      </table>
     </div>
     
-    <h1>New book</h1>
-      <%= form_with model: Book.new do |f| %>
-      <h4>Title</h4>
-      <%= f.text_field :title %>
-      <h4>Body</h4>
-      <%= f.text_area :body %>
-      <%= f.submit "Create Book" %>
-      <% end %>
-      
-  </div>    
-
-  <div class="col-lg-8">
-
-    <h1>Books</h1>
-
-    <table class="table table-striped">
-    <thead>
-      <tr>
-        <th></th>
-        <th>title</th>
-        <th>opinion</th>
-      </tr>  
-    </thead>
-    <tbody>
-    <!-- ユーザーの投稿一覧 -->
-      <% @books.each do |book| %>
-        <tr>
-          <div>
-            <td>
-              <%= link_to "user_name" do %>
-                <%= image_tag book.user.get_profile_image(100,100) %>
-              <% end %>
-            </td>
-            <td><%= link_to book.title, book_path(book.id) %></td>
-            <td><%= book.body %></td>
-          </div>
-        </tr>  
-      <% end %>
- 
-    </tbody>
-
-    </table>
-
   </div>
+</div>
 
-</div>
-</div>
+</html>
